# messaggero

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
benches/: fast_transport.rs  serialization.rs
demos/audit-log/: Cargo.toml
demos/audit-log/src/: main.rs
demos/qwen-agents/: Cargo.toml
demos/qwen-agents/src/: main.rs  ollama.rs
demos/qwen-agents/src/agents/: critic.rs  mod.rs  researcher.rs  summarizer.rs
examples/: multi_agent.rs  ping_pong.rs
messaggero-core/: Cargo.toml
messaggero-core/src/: agent.rs  codec.rs  error.rs  lib.rs  types.rs
messaggero-macros/: Cargo.toml
messaggero-macros/src/: lib.rs
messaggero-transport/: Cargo.toml
messaggero-transport/src/: discovery.rs  lib.rs  router.rs
messaggero-transport/src/a2a/: client.rs  server.rs
messaggero-transport/src/fast/: codec.rs  unix.rs
src/: lib.rs
src/core/: agent.rs  codec.rs  jsonrpc.rs  mod.rs  types.rs
src/transport/: discovery.rs  log.rs  mod.rs  router.rs
src/transport/a2a/: client.rs  mod.rs  server.rs
src/transport/fast/: codec.rs  mod.rs  unix.rs
tests/: fast_transport.rs  middleware.rs  types.rs
