[package]
name = "messaggero-core"
description = "Core wire types, Agent trait, middleware pipeline, and codec for the messaggero agent communication protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
