[package]
name = "messaggero-transport"
description = "Transport layer for messaggero: binary fast path over Unix sockets and A2A-compatible JSON-RPC over HTTP, with smart router and agent discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
messaggero-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }

axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["fast", "a2a"]
fast = []
a2a = ["dep:axum", "dep:reqwest"]
transport-log = []
