[package]
name = "audit-log-demo"
description = "Demo: transport audit logging with TransportLogger (transport-log feature)"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
messaggero = { path = "../..", features = ["transport-log"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
